<resources>
    <string name="app_name">Train Ticketing</string>

    <!-- Login Fragment Strings-->
    <!--Spinner String-->

    <!-- Sign Up Fragment Strings-->
    <string name="female">female</string>
    <string name="male">male</string>

    <!-- Enquire Activity String -->
    <string name="from_label">From</string>
    <string name="to_label">To</string>
    <string name="destination_label">Destination</string>
    <string name="all_time_string">All Time</string>
    <string name="am_string">AM</string>
    <string name="pm_string">PM</string>
    <string name="time_label">Time</string>
    <string name="choose_class_label">Choose Class</string>
    <string name="all_string">All</string>
    <string name="class_a_string">Class A</string>
    <string name="class_b_string">Class B</string>
    <!-- Destination Spinner -->
    <string name="cairo">Cairo</string>
    <string name="shubra">Shubra El Khema</string>
    <string name="qalyoub">Klyob</string>
    <string name="banha">Banha</string>
    <string name="koesna">koesna</string>
    <string name="tanta">Tanta</string>
    <string name="damnhour">Dmnhor</string>
    <string name="kafrDwar">kfr al dwar</string>
    <string name="sediGaber">Sede gaber</string>
    <string name="alex">Alexandria</string>
    <string name="maryout">Mryot</string>
    <string name="elAlameen">Elalamen</string>
    <string name="marsaMatrouh">Marsa mtrouh</string>
    <string name="isamilia">Ismalia</string>
    <string name="elMansoura">Elmnsora</string>
    <string name="portSaied">Port said</string>
    <string name="luxor">Luxor</string>
    <string name="aswan">Aswan</string>
    <string name="creditEg">%d LE</string>

    <!-- Confirm Order -->
    <string name="confirmOrder">Confirm Order</string>
    <!--Payment-->
    <string name="year">YY</string>
    <string name="year2019">2019</string>
    <string name="year2020">2020</string>
    <string name="year2021">2021</string>
    <string name="year2022">2022</string>
    <string name="year2023">2023</string>
    <string name="year2024">2024</string>
    <string name="year2025">2025</string>

    <string name="month">mm</string>
    <string name="month2019">01</string>
    <string name="month2020">02</string>
    <string name="month2021">03</string>
    <string name="month2022">04</string>
    <string name="month2023">05</string>
    <string name="month2024">06</string>
    <string name="month2025">07</string>
    <string name="month2026">08</string>
    <string name="month2027">09</string>
    <string name="month2028">10</string>
    <string name="month2029">11</string>
    <string name="month2030">12</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
