<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/reserveOptionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/enquire_bk"
            app:layout_collapseMode="parallax">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/from_label"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/spinnerFrom"
                app:layout_constraintEnd_toStartOf="@+id/spinnerFrom"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spinnerFrom" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_label"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView"
                app:layout_constraintEnd_toStartOf="@+id/spinnerTo"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/spinnerFrom" />

            <Spinner
                android:id="@+id/spinnerFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Spinner
                android:id="@+id/spinnerTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                style="@style/enquire_title_style"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/destination_label"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/timeRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:checkedButton="@+id/all_time_radio_btn"
                app:layout_constraintEnd_toStartOf="@+id/classRadioGroup"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <RadioButton
                    android:id="@+id/all_time_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/all_time_string" />

                <RadioButton
                    android:id="@+id/am_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/am_string" />

                <RadioButton
                    android:id="@+id/pm_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pm_string" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView4"
                style="@style/enquire_title_style"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/time_label"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toStartOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerFrom" />

            <TextView
                android:id="@+id/textView5"
                style="@style/enquire_title_style"
                android:layout_marginEnd="16dp"
                android:text="@string/choose_class_label"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView4" />

            <RadioGroup
                android:id="@+id/classRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:checkedButton="@+id/class_all_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/timeRadioGroup"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <RadioButton
                    android:id="@+id/class_all_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/all_string" />

                <RadioButton
                    android:id="@+id/class_a_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/class_a_string" />

                <RadioButton
                    android:id="@+id/class_b_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/class_b_string" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/enquire_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/reserveOptionsLayout"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/ticket_item" />

        <ProgressBar
            android:id="@+id/searchProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="128dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            app:srcCompat="@android:drawable/ic_menu_search" />
    </RelativeLayout>
</layout>